Fixed modal background bug on mobile.

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -246,8 +246,10 @@ a.button:visited {color: #fff;}
   border-image: url(button-positive.png) 12 fill repeat;
 }
 
-@media only screen and (max-width: 767px) {
-  .button.positive, a.button.positive {margin-right: 0;}
+@media (min-width: 320px) {
+  .button.positive, a.button.positive {
+    margin-right: 0;
+  }
 }
 
 html.no-borderimage #wrap .button.positive, 
